[package]
name = "cycle-window-osd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
gtk = "0.17.0"
gtk-layer-shell = "0.6.0"
hyprland = "0.3.9"
serde = "1.0.183"
zbus = "3.14.1"
